--- a/data/v2rayse-live.yaml
+++ b/data/v2rayse-live.yaml
@@ -1,7 +1,7 @@
 ####################################
 # 创建者：v2rayse.com
 # 客户端：Clash.Meta
-# 创建时间：2023-10-09 12:49:55
+# 创建时间：2023-10-09 16:08:30
 # 使用模版：V2RaySE 默认模版
 # 节点数量：10
 ####################################
@@ -86,109 +86,109 @@ dns:
       - 0.0.0.0/32
 
 proxies:
-  - {"name":"🇸🇬_SG_新加坡->🇨🇦_CA_加拿大_1","type":"vmess","server":"direct-ca1.xn--pzypc.store","port":80,"cipher":"auto","uuid":"92b87a58-eee6-4377-a438-aac96d95192f","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/akile?ed=2048","headers":{"host":"ca1.xn--pzypc.store"}}}
-  - {"name":"🇬🇧_GB_英国","type":"ss","server":"ukld2.gophers.gay","port":20600,"password":"f5d95005-be14-40fc-bedc-e4a1133a5701","cipher":"chacha20-ietf-poly1305"}
-  - {"name":"🇺🇸_US_美国_1","type":"vmess","server":"iran02.biqibao.site","port":2052,"cipher":"auto","uuid":"9410cc20-c35d-45ed-b3ad-db18716dec30","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/public","headers":{"host":"de4.biqibao.site"}}}
-  - {"name":"🇺🇸_US_美国->🇦🇺_AU_澳大利亚","type":"vmess","server":"fd.shabijichang.com","port":80,"cipher":"auto","uuid":"5e48a497-f4ae-4129-afd6-ba26d75b792a","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/","headers":{"host":"mrb.shabijichang.com"}}}
-  - {"name":"🇸🇬_SG_新加坡->🇨🇦_CA_加拿大_2","type":"vmess","server":"direct-ca4.xn--pzypc.store","port":80,"cipher":"auto","uuid":"92b87a58-eee6-4377-a438-aac96d95192f","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/akile?ed=2048","headers":{"host":"ca4.xn--pzypc.store"}}}
-  - {"name":"🇺🇸_US_美国_2","type":"vmess","server":"cf-lt.sharecentre.online","port":8080,"cipher":"auto","uuid":"d3f830a2-205a-4bba-a7ca-5e87899ac04d","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/api/v3/download.getFile","headers":{"host":"ssrsub.v003.ssrsub.com"}}}
+  - {"name":"🇺🇸_US_美国_1","type":"vless","server":"104.24.176.7","port":443,"uuid":"884f9b2c-f0c5-44dd-a68e-3e39ce93bb39","tls":true,"servername":"cf-wkrs-pages-vless-aoy.pages.dev","network":"ws","ws-opts":{"path":"/@v2ray_god = چنل تلگرام🇮🇷@v2ray_god = چنل تلگرام🇮🇷"}}
+  - {"name":"🇺🇸_US_美国_2","type":"vmess","server":"usfhc4.gophers.gay","port":20353,"cipher":"auto","uuid":"4b445dc7-3db7-4476-978a-1fb2a4d5c2b0","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/?ed=2048","headers":{"host":"microsoft.com"}}}
   - {"name":"🇺🇸_US_美国->🇫🇷_FR_法国","type":"vless","server":"colonelcy.aurorainiceland.com","port":443,"uuid":"a3f8cad2-e83b-4429-a290-373bec463c7e","tls":true,"servername":"colonelcy.aurorainiceland.com","network":"ws","ws-opts":{"path":"/nimws"}}
-  - {"name":"🇺🇸_US_美国->🇳🇱_NL_荷兰","type":"vmess","server":"45.199.138.191","port":30000,"cipher":"auto","uuid":"418048af-a293-4b99-9b0c-98ca3580dd24","alterId":64,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/path/1696251522438","headers":{"host":"www.42077230.xyz"}}}
-  - {"name":"🇺🇸_US_美国_3","type":"vmess","server":"ns1.v2-vip.fun","port":8080,"cipher":"auto","uuid":"d3f830a2-205a-4bba-a7ca-5e87899ac04d","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/api/v3/download.getFile","headers":{"host":"ssrsub.v004.ssrsub.com"}}}
-  - {"name":"🇺🇸_US_美国_4","type":"vmess","server":"24.199.111.70","port":22222,"cipher":"auto","uuid":"2ef8e4ba-187d-4d50-d1eb-99ae641e3df8","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/"}}
+  - {"name":"🇺🇸_US_美国_3","type":"vmess","server":"cf.yx.alue.link","port":2052,"cipher":"auto","uuid":"fe5edf04-c2af-4ac5-84ee-16d43024decb","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/","headers":{"host":"us.wx.alue.link"}}}
+  - {"name":"🇨🇦_CA_加拿大","type":"trojan","server":"108.181.24.37","port":443,"udp":true,"password":"e0ca72b2-eb7c-4498-b05e-28a3681bacbf","sni":"glc-us1.windowsupdatea.com","skip-cert-verify":true,"network":"tcp"}
+  - {"name":"🇬🇧_GB_英国","type":"ss","server":"ukld2.gophers.gay","port":20600,"password":"f5d95005-be14-40fc-bedc-e4a1133a5701","cipher":"chacha20-ietf-poly1305"}
+  - {"name":"🇸🇬_SG_新加坡->🇨🇦_CA_加拿大_1","type":"vmess","server":"direct-ca1.xn--pzypc.store","port":80,"cipher":"auto","uuid":"92b87a58-eee6-4377-a438-aac96d95192f","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/akile?ed=2048","headers":{"host":"ca1.xn--pzypc.store"}}}
+  - {"name":"🇸🇬_SG_新加坡->🇨🇦_CA_加拿大_2","type":"vmess","server":"direct-ca3.xn--pzypc.store","port":80,"cipher":"auto","uuid":"92b87a58-eee6-4377-a438-aac96d95192f","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/akile?ed=2048","headers":{"host":"ca3.xn--pzypc.store"}}}
+  - {"name":"🇺🇸_US_美国->🇳🇱_NL_荷兰","type":"vmess","server":"45.199.138.152","port":30000,"cipher":"auto","uuid":"418048af-a293-4b99-9b0c-98ca4690dd24","alterId":64,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/path/1696598013851","headers":{"host":"www.32522178.xyz"}}}
+  - {"name":"🇰🇷_KR_韩国->🇩🇪_DE_德国","type":"vmess","server":"kr-cdn-6273819.starnetcn.top","port":43213,"cipher":"auto","uuid":"95e3c4c4-5540-4b2e-ac07-a7505f4a9313","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/315d825893fc34aca0231ab967157986","headers":{"host":"desd2yn3ioa4smla.starnetcn.top"}}}
 proxy-groups:
   - name: 🚀 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - DIRECT
-      - 🇸🇬_SG_新加坡->🇨🇦_CA_加拿大_1
-      - 🇬🇧_GB_英国
       - 🇺🇸_US_美国_1
-      - 🇺🇸_US_美国->🇦🇺_AU_澳大利亚
-      - 🇸🇬_SG_新加坡->🇨🇦_CA_加拿大_2
       - 🇺🇸_US_美国_2
       - 🇺🇸_US_美国->🇫🇷_FR_法国
-      - 🇺🇸_US_美国->🇳🇱_NL_荷兰
       - 🇺🇸_US_美国_3
-      - 🇺🇸_US_美国_4
+      - 🇨🇦_CA_加拿大
+      - 🇬🇧_GB_英国
+      - 🇸🇬_SG_新加坡->🇨🇦_CA_加拿大_1
+      - 🇸🇬_SG_新加坡->🇨🇦_CA_加拿大_2
+      - 🇺🇸_US_美国->🇳🇱_NL_荷兰
+      - 🇰🇷_KR_韩国->🇩🇪_DE_德国
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     tolerance: 50
     proxies:
-      - 🇸🇬_SG_新加坡->🇨🇦_CA_加拿大_1
-      - 🇬🇧_GB_英国
       - 🇺🇸_US_美国_1
-      - 🇺🇸_US_美国->🇦🇺_AU_澳大利亚
-      - 🇸🇬_SG_新加坡->🇨🇦_CA_加拿大_2
       - 🇺🇸_US_美国_2
       - 🇺🇸_US_美国->🇫🇷_FR_法国
-      - 🇺🇸_US_美国->🇳🇱_NL_荷兰
       - 🇺🇸_US_美国_3
-      - 🇺🇸_US_美国_4
+      - 🇨🇦_CA_加拿大
+      - 🇬🇧_GB_英国
+      - 🇸🇬_SG_新加坡->🇨🇦_CA_加拿大_1
+      - 🇸🇬_SG_新加坡->🇨🇦_CA_加拿大_2
+      - 🇺🇸_US_美国->🇳🇱_NL_荷兰
+      - 🇰🇷_KR_韩国->🇩🇪_DE_德国
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🚀 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬_SG_新加坡->🇨🇦_CA_加拿大_1
-      - 🇬🇧_GB_英国
       - 🇺🇸_US_美国_1
-      - 🇺🇸_US_美国->🇦🇺_AU_澳大利亚
-      - 🇸🇬_SG_新加坡->🇨🇦_CA_加拿大_2
       - 🇺🇸_US_美国_2
       - 🇺🇸_US_美国->🇫🇷_FR_法国
-      - 🇺🇸_US_美国->🇳🇱_NL_荷兰
       - 🇺🇸_US_美国_3
-      - 🇺🇸_US_美国_4
+      - 🇨🇦_CA_加拿大
+      - 🇬🇧_GB_英国
+      - 🇸🇬_SG_新加坡->🇨🇦_CA_加拿大_1
+      - 🇸🇬_SG_新加坡->🇨🇦_CA_加拿大_2
+      - 🇺🇸_US_美国->🇳🇱_NL_荷兰
+      - 🇰🇷_KR_韩国->🇩🇪_DE_德国
   - name: 📲 电报信息
     type: select
     proxies:
       - 🚀 节点选择
       - 🎯 全球直连
-      - 🇸🇬_SG_新加坡->🇨🇦_CA_加拿大_1
-      - 🇬🇧_GB_英国
       - 🇺🇸_US_美国_1
-      - 🇺🇸_US_美国->🇦🇺_AU_澳大利亚
-      - 🇸🇬_SG_新加坡->🇨🇦_CA_加拿大_2
       - 🇺🇸_US_美国_2
       - 🇺🇸_US_美国->🇫🇷_FR_法国
-      - 🇺🇸_US_美国->🇳🇱_NL_荷兰
       - 🇺🇸_US_美国_3
-      - 🇺🇸_US_美国_4
+      - 🇨🇦_CA_加拿大
+      - 🇬🇧_GB_英国
+      - 🇸🇬_SG_新加坡->🇨🇦_CA_加拿大_1
+      - 🇸🇬_SG_新加坡->🇨🇦_CA_加拿大_2
+      - 🇺🇸_US_美国->🇳🇱_NL_荷兰
+      - 🇰🇷_KR_韩国->🇩🇪_DE_德国
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🚀 节点选择
-      - 🇸🇬_SG_新加坡->🇨🇦_CA_加拿大_1
-      - 🇬🇧_GB_英国
       - 🇺🇸_US_美国_1
-      - 🇺🇸_US_美国->🇦🇺_AU_澳大利亚
-      - 🇸🇬_SG_新加坡->🇨🇦_CA_加拿大_2
       - 🇺🇸_US_美国_2
       - 🇺🇸_US_美国->🇫🇷_FR_法国
-      - 🇺🇸_US_美国->🇳🇱_NL_荷兰
       - 🇺🇸_US_美国_3
-      - 🇺🇸_US_美国_4
+      - 🇨🇦_CA_加拿大
+      - 🇬🇧_GB_英国
+      - 🇸🇬_SG_新加坡->🇨🇦_CA_加拿大_1
+      - 🇸🇬_SG_新加坡->🇨🇦_CA_加拿大_2
+      - 🇺🇸_US_美国->🇳🇱_NL_荷兰
+      - 🇰🇷_KR_韩国->🇩🇪_DE_德国
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🚀 节点选择
       - 🎯 全球直连
-      - 🇸🇬_SG_新加坡->🇨🇦_CA_加拿大_1
-      - 🇬🇧_GB_英国
       - 🇺🇸_US_美国_1
-      - 🇺🇸_US_美国->🇦🇺_AU_澳大利亚
-      - 🇸🇬_SG_新加坡->🇨🇦_CA_加拿大_2
       - 🇺🇸_US_美国_2
       - 🇺🇸_US_美国->🇫🇷_FR_法国
-      - 🇺🇸_US_美国->🇳🇱_NL_荷兰
       - 🇺🇸_US_美国_3
-      - 🇺🇸_US_美国_4
+      - 🇨🇦_CA_加拿大
+      - 🇬🇧_GB_英国
+      - 🇸🇬_SG_新加坡->🇨🇦_CA_加拿大_1
+      - 🇸🇬_SG_新加坡->🇨🇦_CA_加拿大_2
+      - 🇺🇸_US_美国->🇳🇱_NL_荷兰
+      - 🇰🇷_KR_韩国->🇩🇪_DE_德国
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -211,16 +211,16 @@ proxy-groups:
       - 🚀 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬_SG_新加坡->🇨🇦_CA_加拿大_1
-      - 🇬🇧_GB_英国
       - 🇺🇸_US_美国_1
-      - 🇺🇸_US_美国->🇦🇺_AU_澳大利亚
-      - 🇸🇬_SG_新加坡->🇨🇦_CA_加拿大_2
       - 🇺🇸_US_美国_2
       - 🇺🇸_US_美国->🇫🇷_FR_法国
-      - 🇺🇸_US_美国->🇳🇱_NL_荷兰
       - 🇺🇸_US_美国_3
-      - 🇺🇸_US_美国_4
+      - 🇨🇦_CA_加拿大
+      - 🇬🇧_GB_英国
+      - 🇸🇬_SG_新加坡->🇨🇦_CA_加拿大_1
+      - 🇸🇬_SG_新加坡->🇨🇦_CA_加拿大_2
+      - 🇺🇸_US_美国->🇳🇱_NL_荷兰
+      - 🇰🇷_KR_韩国->🇩🇪_DE_德国
 
 rules:
 # 本地/局域网地址
